crates/rustyray-macros/tests/ui/fail/self_parameter.stderr
error: #[remote] cannot be used on methods with self parameter
 --> tests/ui/fail/self_parameter.rs:7:14
  |
7 |     async fn invalid_method(&self) -> i32 {
  |              ^^^^^^^^^^^^^^
